Lesson 4: Add appeal form (web & api) (#15)
* Lesson 4: Add appeal form (web & api)

(cherry picked from commit 907691c50cee41832ffd4d8fd7914cc9f59a7c4d)

* fix controller

* fix controller
